--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,4 +1,11 @@
  <%= form_tag charges_path do %>
    <h4>Click the button!</h4>
-   <script class='stripe-button' src="https://checkout.stripe.com/checkout.js" data-key="<%= @stripe_btn_data[:key] %>" data-amount=<%= @stripe_btn_data[:amount] %> data-description="<%= @stripe_btn_data[:description] %>" ></script>
+     <script
+    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+    data-key="pk_test_LMc2hhelxk5eAJcigjuc1EbD"
+    data-amount="1500"
+    data-name="Account upgrade"
+    data-description="This will allow you to create private wikis"
+    data-locale="auto">
+  </script>
  <% end %>
