--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -32,6 +32,21 @@
   </div>
 <% end %>
 
+<h3>Upgrade my account</h3>
+
+<%= form_tag charges_path do %>
+<div class="stripe-button-container">
+<script src="https://checkout.stripe.com/checkout.js" class="stripe-button active" data-key="pk_test_LMc2hhelxk5eAJcigjuc1EbD" data-amount="2000" data-name="Demo Site" data-description="2 widgets" data-image="/img/documentation/checkout/marketplace.png" data-locale="auto" data-notrack="">
+1
+</script>
+<button type="submit" class="stripe-button-el" style="visibility: visible;">
+<span style="display: block; min-height: 30px;">Subscribe now!</span>
+</button>
+</div>
+<% end %>
+
+
+
 <h3>Cancel my account</h3>
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
