--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <ul class="nav nav-tabs">
       <%= link_to "Blocipedia", root_path %> -
       <% if user_signed_in? %>
-        Signed in as: <strong><%= current_user.email %></strong> |
+        Signed in as: <strong><%= current_user.email %></strong> | <%= current_user.role.upcase%>
         <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - 
         <%= link_to "Create new wiki", new_wiki_path, :class => 'navbar-link'  %> -
         <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
