--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -1,7 +1,7 @@
 <% if current_user.admin? || current_user.premium? %>
   <div class="form-group">
-    <%= f.label :private, class: 'checkbox' do %>
-      <%= f.check_box :private %> Private wiki
+    <%= f.label :public, class: 'checkbox' do %>
+      <%= f.check_box :public %> Public wiki
     <% end %>
   </div>
 <% end %>
