--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -20,6 +20,11 @@
           <%= f.label :public, class: 'checkbox' do %>
           <%= f.check_box :public %> Public wiki
         <% end %>
+        
+      <% if (current_user.admin? || (@wiki.creator == current_user && current_user.premium?) || @wiki.collaborators.include?(current_user) ) %>
+
+        <%= render partial: 'collaborations/form', locals: { f: f, wiki: @wiki, collaborators: @wiki.collaborators } %>
+      <% end %>        
         </div>
        <% end %>
      <% end %>
