uninitialized constant error NameError in Wikis#show

--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -21,10 +21,13 @@
           <%= f.check_box :public %> Public wiki
         <% end %>
         
-      <% if (current_user.admin? || (@wiki.creator == current_user && current_user.premium?) || @wiki.collaborators.include?(current_user) ) %>
-
-        <%= render partial: 'collaborations/form', locals: { f: f, wiki: @wiki, collaborators: @wiki.collaborators } %>
-      <% end %>        
+    <% if current_user.admin? || current_user.premium? %>
+      <h4>Add Collaborators</h4>
+      <div class="form-group">
+        <%= f.select "collaborators", options_from_collection_for_select(User.all, :id, :email), {include_blank: true} %>
+      </div>
+    <% end %>
+    
         </div>
        <% end %>
      <% end %>
