Users can add collaborators, working on deleting collaborators

--- a/app/views/collaborations/_listing.html.erb
+++ b/app/views/collaborations/_listing.html.erb
@@ -1,7 +1,7 @@
 <div>
 <% unless @wiki.collaborators.empty?  %>
   <% @wiki.collaborators.each do |collaborator| %>
-  <%= collaborator.email %>
+  <%= collaborator.email %>,
   <%  end %>
 <% end %>
 </div>
