--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -24,9 +24,14 @@
           </div>
         <% end %>
 
-        <% if current_user && current_user.premium? %>
+    <% if current_user.admin? || current_user.premium? %>
+      <h4>Add Collaborators</h4>
+      <div class="form-group">
+         <% if current_user && current_user.premium? %>
           <%= render partial: 'collaborations/form', locals: { f: f, wiki: @wiki, collaborators: @wiki.collaborators } %>
-        <% end %>        
+        <% end %> 
+      </div>
+    <% end %>      
         
 
       <% end %>   
