--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -5,16 +5,16 @@
      <p><%= markdown(@wiki.body) %></p>
    </div>
    
-   <div>
-    <p>Collaborators: 
-      <% @wiki.collaborators.each do | collaborator | %>
-      <%= collaborator.user.email %>
-      <% end %>
-    </p>
-  </div>   
    
    <div class="col-md-4">
      <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
      <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-success' %>
    </div>
+   
+   <div class="col-md-12">
+    <h3>Collaborators:</h3> 
+      <% if !@wiki.collaborators.empty?%>
+      <%= render partial: "collaborations/listing", locals: { collaborators: @wiki.collaborators } %>
+      <% end %>
+   </div> 
  </div>
