--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,42 @@
-<h1>Welcome to Blocipedia</h1>
-<p>An application that allows users to create public and private Markdown-based wikis.</p>
+
+    <div class="main">
+        <p class="heading" style="background-image: url(<%= image_path('bookshelf.jpg') %>);">BLOCIPEDIA</p>
+        <p class="subheading">Create and Share Markdown Wikis</p>
+  
+    
+
+    <div class="why">
+        <h2>WHY BLOCIPEDIA</h2>
+        
+        <div class="col-md-4">
+            <h3>Easy To Use</h3>
+            <span class="ion ion-thumbsup"></span>
+            <p>BLOCIPEDIA is a simple and efficient way to create content accessible to anyone on the web. Simply sign up for an account and start creating shareable wikis today!</p>
+        </div>
+        <div class="col-md-4">
+            <h3>Write in Markdown</h3>
+            <span class="ion ion-social-markdown"></span>
+            <p>BLOCIPEDIA provides the ability for you to conveniently write content in Markdown.</p>
+        </div>
+        <div class="col-md-4">
+            <h3>Share Ideas</h3>
+            <span class="ion ion-android-bulb"></span>
+            <p>BLOCIPEDIA allows you to collaborate and share ideas, work, and knowledge with people around the world.</p>
+        </div>
+    </div>
+      
+    <div class="premium">
+        <h2>WHY PREMIUM</h2>
+        
+        <div class="col-md-6">
+            <h3>Make Content Private</h3>
+            <span class="ion ion-locked"></span>
+            <p>BLOCIPEDIA allows you to make your content private- where you have total control over who can access your wikis- with a premium membership.</p>
+        </div>
+        <div class="col-md-6">
+            <h3>Add Collaborators</h3>
+            <span class="ion ion-android-person-add"></span>
+            <p>A Premium Membership lets you add and remove collaborators as you see best for your private wikis.</p>
+        </div>
+    </div>
+    </div>
