--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,9 +9,146 @@
  * compiled file so the styles you add here take precedence over styles defined in any styles
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
- *
+ *= require normalize-rails
  *= require_tree .
  *= require_self
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+ 
+
+ 
+.nav {
+  border-bottom: none;
+}
+
+.main {
+  width: 100%;
+  text-align: center;
+  color: #331a00;
+  margin: -75px auto;
+}
+
+.heading {
+  margin: 100px auto 50px;
+  font-family: 'Archivo Black', sans-serif;
+  color: white;
+  text-shadow: 2px 2px black;  
+  font-size: 160px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;  
+}
+.public_wikis h1 {
+  text-align: center;
+  margin: 80px auto 40px;
+  font-family: 'Archivo Black', sans-serif;
+  color: #336699;
+  font-size: 60px;
+  width: 100%;
+}
+
+.new-wiki-btn {
+  font-size: 16px;
+  text-align: right;
+  width: 100%;
+}
+
+.new-wiki-btn a {
+  padding: 10px;
+}
+.new-wiki-btn a:hover {
+  text-decoration: none;
+  background-color: #ffbf80;
+}
+.subheading {
+  color: #483D3F;
+  font-size: 30px;
+}
+.wikis {
+  background-color: #ffe6cc;
+  padding: 5px;
+  margin: 15px 0px;
+  border-radius: 3px;
+  overflow: hidden;
+  width: auto;
+}
+.modify {
+  text-align: right;
+  padding: 0px 10px;
+}
+.why {
+  background-color: #058ED9;
+  width: 100%;
+  height: 450px;
+  margin: 50px 0px;
+  padding: 40px 20px;
+  color: #483D3F;
+}
+
+.why p, .premium p{
+  font-size: 16px;
+}
+
+.premium {
+  background-color: #ffa64d;
+  width: 100%;
+  height: 450px;
+  margin: 50px 0px;
+  padding: 40px 20px;
+  color: white;
+}
+
+.start {
+  color: #336699;
+  text-align: center;
+  width: 100%;
+  margin-bottom: 80px;
+}
+
+.start a:hover {
+  text-decoration: none;
+}
+
+tr:nth-child(even) {background-color: #f2f2f2}
+
+table {
+  border: 1px solid black;
+  table-layout: fixed;
+  width: 400px;
+}
+
+td {
+  padding: 15px;
+  border-left: 1px solid black;
+  width: auto;
+}
+.center {
+  margin-left: auto;
+  margin-right: auto;
+  width: 400px;
+  text-align: center;
+  display: block;
+  padding: 20px;
+}
+
+.nav-tabs li a:hover {
+  background-color: #ffbf80;
+  border-radius: 0px;
+}
+.nav-tabs .logo a:hover {
+  background-color: #ffa64d;
+}
+.nav-tabs li.logo {
+  background-color: blue;
+  font-family: 'Archivo Black', sans-serif;
+  color: white;
+}
+.nav-tabs .logo a {
+  color: white
+}
+
+.ion {
+     font-size: 8rem;
+     margin: 15px auto;
+ }
