--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,139 +16,94 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
  
-
+ *, *::before, *::after {
+     -moz-box-sizing: border-box;
+     -webkit-box-sizing: border-box;
+     box-sizing: border-box;
+ }
+ 
+html {
+    height: 100%; /* makes sure our HTML takes up 100% of the browser window */
+    font-size: 100%;
+} 
  
 .nav {
   border-bottom: none;
 }
 
-.main {
+body {
   width: 100%;
   text-align: center;
-  color: #331a00;
-  margin: -75px auto;
+//   color: #331a00;
 }
 
-.heading {
-  margin: 100px auto 50px;
-  font-family: 'Archivo Black', sans-serif;
-  color: white;
-  text-shadow: 2px 2px black;  
-  font-size: 160px;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;  
-}
-.public_wikis h1 {
-  text-align: center;
-  margin: 80px auto 40px;
-  font-family: 'Archivo Black', sans-serif;
-  color: #336699;
-  font-size: 60px;
-  width: 100%;
-}
-
-.new-wiki-btn {
-  font-size: 16px;
-  text-align: right;
-  width: 100%;
-}
-
-.new-wiki-btn a {
-  padding: 10px;
-}
-.new-wiki-btn a:hover {
-  text-decoration: none;
-  background-color: #ffbf80;
-}
-.subheading {
-  color: #483D3F;
-  font-size: 30px;
-}
-.wikis {
-  background-color: #ffe6cc;
-  padding: 5px;
-  margin: 15px 0px;
-  border-radius: 3px;
-  overflow: hidden;
-  width: auto;
-}
-.modify {
-  text-align: right;
-  padding: 0px 10px;
-}
-.why {
-  background-color: #058ED9;
-  width: 100%;
-  height: 450px;
-  margin: 50px 0px;
-  padding: 40px 20px;
-  color: #483D3F;
-}
-
-.why p, .premium p{
-  font-size: 16px;
-}
-
-.premium {
-  background-color: #ffa64d;
-  width: 100%;
-  height: 450px;
-  margin: 50px 0px;
-  padding: 40px 20px;
-  color: white;
-}
-
-.start {
-  color: #336699;
-  text-align: center;
-  width: 100%;
-  margin-bottom: 80px;
-}
-
-.start a:hover {
-  text-decoration: none;
-}
-
-tr:nth-child(even) {background-color: #f2f2f2}
-
-table {
-  border: 1px solid black;
-  table-layout: fixed;
-  width: 400px;
-}
-
-td {
-  padding: 15px;
-  border-left: 1px solid black;
-  width: auto;
-}
-.center {
-  margin-left: auto;
-  margin-right: auto;
-  width: 400px;
-  text-align: center;
-  display: block;
-  padding: 20px;
-}
 
 .nav-tabs li a:hover {
-  background-color: #ffbf80;
+  background-color: #A39A92;
   border-radius: 0px;
 }
 .nav-tabs .logo a:hover {
-  background-color: #ffa64d;
+  background-color: white;
+  color: #058ED9;
 }
 .nav-tabs li.logo {
-  background-color: blue;
-  font-family: 'Archivo Black', sans-serif;
+  background-color: #058ED9;
+  font-family: 'Fredoka One', cursive;
   color: white;
 }
 .nav-tabs .logo a {
-  color: white
+  color: white;
 }
 
-.ion {
-     font-size: 8rem;
-     margin: 15px auto;
+.dropdown-menu {
+    color: #F4EBD9;
+}
+
+ .container {
+     margin: 0 auto;
+     max-width: 64rem;
  }
+ 
+  /* Small Screens (200px) */
+ @media (min-width: 200px) {
+   .hero-title { font-size: 11vw; }
+   
+ }
+ 
+  /* Medium screens (640px) */
+ @media (min-width: 640px) {
+     html { font-size: 112%; }
+
+     .column {
+        float: left;
+        padding-left: 1rem;
+        padding-right: 1rem;
+     }     
+     
+     .column.full { width: 100%; }
+     .column.two-thirds { width: 66.7%; }
+     .column.half { width: 50%; }
+     .column.third { 
+       width: 31.3%; 
+       margin-left: 1%;
+       margin-right: 1%;
+     }
+     .column.fourth { width: 25%; }
+     .column.flow-opposite { float: right; }      
+ }
+
+ /* Large screens (1024px) */
+ @media (min-width: 1024px) {
+     html { font-size: 120%; }
+     
+ }
+ 
+.clearfix::before,
+.clearfix::after {
+   content: " ";
+   display: table;
+}
+
+.clearfix::after {
+   clear: both;
+}
