--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
+  <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <%= stylesheet_link_tag    'landing', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
 <body style="background-color: #F4EBD9;">
-  <div class="container">
-    <div class="navbar-collapse collapse navbar-static-top">
+  
+  <div class="navbar navbar-static-top">
+    <div class="container-fluid">
      <ul class="nav nav-tabs navbar-left">
        <li class="logo"><%= link_to "BLOCIPEDIA", root_path %></li>
        <li><%= link_to "View Wikis", wikis_path %></li>
@@ -32,11 +36,12 @@
         </li>
      <% else %>
         <ul class="nav nav-tabs navbar-right">
-          <li class="user-info"><%= link_to "SIGN UP", new_user_registration_path, :class => 'navbar-link'  %></li>
-          <li class="user-info"><%= link_to "SIGN IN", new_user_session_path, :class => 'navbar-link'  %></li>
+          <li><%= link_to "SIGN UP", new_user_registration_path, :class => 'navbar-link'  %></li>
+          <li><%= link_to "SIGN IN", new_user_session_path, :class => 'navbar-link'  %></li>
      <% end %>
     </ul>
   </div>
+  
     <% if flash[:notice] %>
       <div class="alert alert-success">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
