--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,42 +1,58 @@
 
-    <div class="main">
-        <p class="heading" style="background-image: url(<%= image_path('bookshelf.jpg') %>);">BLOCIPEDIA</p>
-        <p class="subheading">Create and Share Markdown Wikis</p>
-  
+<body>
     
+        <div class="hero-content" style="background-image: url(<%= image_path('bookshelf.jpg') %>);">
+            <h1 class="hero-title">BLOCIPEDIA</h1>
+        </div>
+  
+    <div class="colum full cap">    
+        <h2>WELCOME TO WIKI PARADISE</h2>
+    </div>
 
-    <div class="why">
-        <h2>WHY BLOCIPEDIA</h2>
-        
-        <div class="col-md-4">
-            <h3>Easy To Use</h3>
-            <span class="ion ion-thumbsup"></span>
-            <p>BLOCIPEDIA is a simple and efficient way to create content accessible to anyone on the web. Simply sign up for an account and start creating shareable wikis today!</p>
-        </div>
-        <div class="col-md-4">
-            <h3>Write in Markdown</h3>
-            <span class="ion ion-social-markdown"></span>
-            <p>BLOCIPEDIA provides the ability for you to conveniently write content in Markdown.</p>
-        </div>
-        <div class="col-md-4">
-            <h3>Share Ideas</h3>
-            <span class="ion ion-android-bulb"></span>
-            <p>BLOCIPEDIA allows you to collaborate and share ideas, work, and knowledge with people around the world.</p>
-        </div>
-    </div>
+    <section class="selling-points clearfix">
+
+        <span>
+            <div class="points points column third">
+                <h3>Create Content</h3>
+                <span class="ion ion-compose"></span>
+                <p>Blocipedia is a site for creating and sharing wikis. It's easy and accessible to anyone on the web. </p>
+            </div>
+            <div class="points points column third">
+                <h3>Write in Markdown</h3>
+                <span class="ion ion-social-markdown"></span>
+                <p>Blocipedia provides the ability for you to conveniently write content in Markdown.</p>
+            </div>
+            <div class="points points column third">
+                <h3>Share Ideas</h3>
+                <span class="ion ion-lightbulb"></span>
+                <p>Blocipedia allows you to collaborate and share ideas, work, and knowledge with people around the world.</p>
+            </div>
+        </span>
       
-    <div class="premium">
-        <h2>WHY PREMIUM</h2>
+ 
+    <div class="column full cap">
+        <h2>PREMIUM FEATURES</h2>
+    </div>
+        <span>   
+            <div class="points column third">
+                <h3>Upgrade</h3>
+                <span class="ion ion-cash"></span>
+                <p>For just $15 dollars you can upgrade your account!</p>
+            </div>        
+            <div class="points column third">
+                <h3>Make Content Private</h3>
+                <span class="ion ion-locked"></span>
+                <p>Blocipedia allows you to make your content private- where you have total control over who can access your wikis with a premium membership.</p>
+            </div>
+            <div class="points column third">
+                <h3>Add Collaborators</h3>
+                <span class="ion ion-person-add"></span>
+                <p>A Premium Membership lets you add and remove collaborators for your wikis.</p>
+            </div>
+        </span> 
         
-        <div class="col-md-6">
-            <h3>Make Content Private</h3>
-            <span class="ion ion-locked"></span>
-            <p>BLOCIPEDIA allows you to make your content private- where you have total control over who can access your wikis- with a premium membership.</p>
-        </div>
-        <div class="col-md-6">
-            <h3>Add Collaborators</h3>
-            <span class="ion ion-android-person-add"></span>
-            <p>A Premium Membership lets you add and remove collaborators as you see best for your private wikis.</p>
-        </div>
-    </div>
-    </div>
+    <div class="column full">
+        <%= link_to "Sign up", new_user_registration_path, :class => "button" %>
+    </div>        
+    </section>
+</body>
