--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New Wikis</h1>
 
 <div class="row">
-    <div class="col-md-8">
+    <div class="column full">
         <%= form_for @wiki do |f| %>
             <div class="form-group">
                 <%= f.label :title %>
