--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,43 +4,40 @@
   <title>Blocipedia</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'responsive-nav', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag    'responsive-nav.js', 'data-turbolinks-track' => true %>  
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
   <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <%= stylesheet_link_tag    'landing', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'responsive-nav', 'data-turbolinks-track' => true %>   
   <%= csrf_meta_tags %>
 </head>
 
 <body style="background-color: #F4EBD9;">
   
-  <div class="navbar navbar-static-top">
-    <div class="container-fluid">
-     <ul class="nav nav-tabs navbar-left">
-       <li class="logo"><%= link_to "BLOCIPEDIA", root_path %></li>
-       <li><%= link_to "View Wikis", wikis_path %></li>
-      <li><%= link_to "Create New Wiki", new_wiki_path %></li>
-    </ul>
-     <% if user_signed_in? %>
-      <ul class="nav nav-tabs navbar-right">
-        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">SIGNED IN AS: <strong><%= current_user.email %></strong> </a>
-         <ul class="dropdown-menu">
-           <li><%= link_to 'Edit Profile', edit_user_registration_path, :class => 'navbar-link' %></li>
-           <% if current_user.standard? %>
-              <li><%= link_to 'Upgrade to Premium', new_charge_path, :class => 'navbar-link'%></li>
-           <% elsif current_user.premium? %>
-              <li><%= link_to 'Cancel Premium Membership', downgrade_user_path(current_user), :class => 'navbar-link', method: :put, data: {confirm: 'Are you sure you want to cancel your premium membership? All of your private wikis will be made'}%></li>
-           <% end %>
-           <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
-         </ul>
-        </li>
-     <% else %>
-        <ul class="nav nav-tabs navbar-right">
-          <li><%= link_to "SIGN UP", new_user_registration_path, :class => 'navbar-link'  %></li>
-          <li><%= link_to "SIGN IN", new_user_session_path, :class => 'navbar-link'  %></li>
-     <% end %>
-    </ul>
-  </div>
+  <nav class="nav-collapse">
+    
+      <ul>
+        <li class="logo" style="float:left"><%= link_to "BLOCIPEDIA", root_path %></li>
+
+    <% if user_signed_in? %>
+
+        <li style="float:right"><%= link_to 'Edit Profile', edit_user_registration_path %></li>
+        <li style="float:right"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li> 
+        <li style="float:right"><%= link_to "View Wikis", wikis_path %></li>
+        <li style="float:right"><%= link_to "Create New Wiki", new_wiki_path %></li>        
+    
+    <% else %>
+    
+        <li style="float:right"><%= link_to "SIGN UP", new_user_registration_path %></li>
+        <li style="float:right"><%= link_to "SIGN IN", new_user_session_path %></li>
+        
+    <% end %>
+    
+      </ul>
+  </nav>
   
     <% if flash[:notice] %>
       <div class="alert alert-success">
@@ -60,7 +57,11 @@
     <% end %>
 
     <%= yield %>
-  </div>
+  
+  
+    <script>
+        var nav = responsiveNav(".nav-collapse");
+    </script>  
 
 </body>
 </html>
