--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,7 @@
             <h1 class="hero-title">BLOCIPEDIA</h1>
         </div>
   
-    <div class="colum full cap">    
+    <div class="column full cap">    
         <h2>WELCOME TO WIKI PARADISE</h2>
     </div>
 
