--- a/app/assets/stylesheets/responsive-nav.scss
+++ b/app/assets/stylesheets/responsive-nav.scss
@@ -2,7 +2,7 @@
   margin: 0px;
   padding: 25px;
   width: 100%;
-  display: block;
+  display: inline-block;
   list-style: none;
   overflow: hidden;
   background-color: #058ED9;
@@ -10,15 +10,17 @@
 }
 
 .nav-collapse li {
-  display: inline;
+  display: inline-block;
+  white-space: nowrap;
 }
 
 .nav-collapse li a {
-    display: inline;
+    display: inline-block;
     color: white;
     text-align: center;
     padding: 15px 16px;
     text-decoration: none;
+    position: relative;
 }
 
 .js .nav-collapse {
@@ -34,29 +36,77 @@
   max-height: 9999px;
 }
 
-.nav-toggle {
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -o-user-select: none;
-  user-select: none;
+.js .nav-collapse.closed {
+    max-height: none;
+}
+
+// .nav-toggle {
+//   -webkit-tap-highlight-color: rgba(0,0,0,0);
+//   -webkit-touch-callout: none;
+//   -webkit-user-select: none;
+//   -moz-user-select: none;
+//   -ms-user-select: none;
+//   -o-user-select: none;
+//   user-select: none;
+// }
+
+button {
+  color: white;
+  padding: 1em;
+  border: 0;
+  cursor: pointer;
+  background: #058ED9;
+  width: 100%;
+}
+
+button.active {
+  background: #A39A92;
 }
 
 .logo {
     font-family: 'Fredoka One', cursive;
+    float: left;
 }
 
-@font-face {
-  font-family: "responsivenav";
-  src:url("../icons/responsivenav.eot");
-  src:url("../icons/responsivenav.eot?#iefix") format("embedded-opentype"),
-    url("../icons/responsivenav.ttf") format("truetype"),
-    url("../icons/responsivenav.woff") format("woff"),
-    url("../icons/responsivenav.svg#responsivenav") format("svg");
-  font-weight: normal;
-  font-style: normal;
+
+
+
+
+@media (min-width:640px){
+
+    button {
+        display: none;
+    }
+    
 }
+
+@media (max-width:640px){
+    
+    .nav-toggle{
+         background-color: white;
+    }
+    
+    .nav-collapse ul {
+        text-decoration: none;
+        width: 100%;
+        background: #058ED9;
+        padding: 0;
+        
+    }
+    
+    .nav-collapse li {
+         width: 100%;
+         border-bottom: 1px solid white;
+    }    
+}
+
+
+
+
+
+
+
+
+
 
 
