create wiki page styled and responsive

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+ @import "bootstrap-toggle";
  
  *, *::before, *::after {
      -moz-box-sizing: border-box;
