--- a/app/views/collaborations/_listing.html.erb
+++ b/app/views/collaborations/_listing.html.erb
@@ -1,9 +1,10 @@
 <div>
 <% unless @wiki.collaborators.empty?  %>
-  <% @wiki.collaborators.each do |collaborator| %>
-  <%= collaborator.email %> <%= link_to "Remove Collaborator", delete_wiki_collaborator_path(@wiki, id: collaborator.id), method: :put, class: "btn btn-danger" %> </br>
-  <%  end %>
-<% end %>
+  <ul class="list-group">
+    <% @wiki.collaborators.each do |collaborator| %>
+    <li class="list-group-item"><%= collaborator.email %> <%= link_to "Remove Collaborator", delete_wiki_collaborator_path(@wiki, id: collaborator.id), method: :put, class: "btn btn-danger" %></li>
+    <%  end %>
+  <% end %>
 </div>
 
 <!--# only applied this to the edit view.-->
