--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <%= stylesheet_link_tag    'responsive-nav', media: 'all', 'data-turbolinks-track' => true %>
   <%= stylesheet_link_tag    'landing', media: 'all', 'data-turbolinks-track' => true %>
   <%= stylesheet_link_tag    'wiki_index', media: 'all', 'data-turbolinks-track' => true %>  
+  <%= stylesheet_link_tag    'wiki_new', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'responsive-nav.js', 'data-turbolinks-track' => true %>  
   <%= csrf_meta_tags %>
@@ -67,6 +68,7 @@
       var navigation = responsiveNav(".nav-collapse", {
         customToggle: "#toggle"
       });
+      
     </script>  
 
 </body>
