--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,39 +1,54 @@
-<h1>New Wikis</h1>
 
-<div class="row">
-    <div class="column full">
+<script>
+        $(document).on('turbolinks:load', function() {
+          $('input[type="checkbox"].toggle2').bootstrapToggle(); 
+        });    
+</script>
+
+
+
+
+<div class="page-header" align="center">
+    <h1>New Wiki</h1>
+</div>    
+
+
+    <div class="panel">
         <%= form_for @wiki do |f| %>
-            <div class="form-group">
+        
+            <div class="form-group panel-heading">
                 <%= f.label :title %>
-                <%= f.text_field :title %>
+                <%= f.text_field :title, class: 'form-control', placeholder: "Enter wiki title" %>
             </div>
-            <div class="form-group">
+            
+            <div class="form-group panel-body">
                 <%= f.label :body %>
                 <%= f.text_area :body,  rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
             </div>
             
-        <div class="form-group">
-          <%= f.submit "Save", class: 'btn btn-success' %>
-        </div>
-        
-        <% if current_user.admin? || current_user.premium? %>
-          <div class="form-group">
-            <%= f.label :public, class: 'checkbox' do %>
-            <%= f.check_box :public %> Public wiki
+    
+            <% if current_user.admin? || current_user.premium? %>
+              <div class="form-inline clearfix" style="margin-bottom: 25px;">
+                <%= f.label :Make_wiki_public %>  
+                <%= f.check_box :public, class: "toggle2", :data => {size: 'mini', on: 'Yes', onstyle: 'success', off: 'No', offstyle: 'danger' }  do %> 
+                <% end %>
+              </div>
             <% end %>
-          </div>
-        <% end %>
-
-    <% if current_user.admin? || current_user.premium? %>
-      <h4>Add Collaborators</h4>
-      <div class="form-group">
-         <% if current_user && current_user.premium? %>
-          <%= render partial: 'collaborations/form', locals: { f: f, wiki: @wiki, collaborators: @wiki.collaborators } %>
-        <% end %> 
-      </div>
-    <% end %>      
+    
+            <% if current_user.admin? || current_user.premium? %>
+    
+                  <div class="form-group">
+                     <% if current_user && current_user.premium? %>
+                         <%= render partial: 'collaborations/form', locals: { f: f, wiki: @wiki, collaborators: @wiki.collaborators } %>
+                     <% end %> 
+                  </div>
+            <% end %>      
+            
+            <div class="form-group">
+              <%= f.submit "Save", class: 'btn btn-success' %>
+            </div>
+            
+       <% end %> 
+    </div>    
+    
         
-
-      <% end %>   
-    </div>
-</div>        
