--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <%= stylesheet_link_tag    'landing', media: 'all', 'data-turbolinks-track' => true %>
   <%= stylesheet_link_tag    'wiki_index', media: 'all', 'data-turbolinks-track' => true %>  
   <%= stylesheet_link_tag    'wiki_new', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'wiki_edit', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'responsive-nav.js', 'data-turbolinks-track' => true %>  
   <%= csrf_meta_tags %>
