--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,13 +1,3 @@
-
-<script>
-        $(document).on('turbolinks:load', function() {
-          $('input[type="checkbox"].toggle2').bootstrapToggle(); 
-        });    
-</script>
-
-
-
-
 <div class="page-header" align="center">
     <h1>New Wiki</h1>
 </div>    
@@ -30,7 +20,7 @@
             <% if current_user.admin? || current_user.premium? %>
               <div class="form-inline clearfix" style="margin-bottom: 25px;">
                 <%= f.label :Make_wiki_public %>  
-                <%= f.check_box :public, class: "toggle2", :data => {size: 'mini', on: 'Yes', onstyle: 'success', off: 'No', offstyle: 'danger' }  do %> 
+                <%= f.check_box :public, class: "toggle", :data => {size: 'mini', on: 'Yes', onstyle: 'success', off: 'No', offstyle: 'danger' }  do %> 
                 <% end %>
               </div>
             <% end %>
