--- a/app/assets/stylesheets/wiki_index.scss
+++ b/app/assets/stylesheets/wiki_index.scss
@@ -123,3 +123,15 @@ blockquote {
 	width: 50%;
 	text-align: center;
 }
+
+
+@media screen and (max-width: 320px) {
+
+    
+    h1.xs {
+        font-size: 250%;
+        width: 75%;
+    }
+    
+
+}
