--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
 <body style="background-color: #F4EBD9;">
   
-    <button id="toggle" class="closed">Menu</button>  
+    <button id="toggle" class="closed"><span class="glyphicon glyphicon-menu-hamburger glyphicon-align-left"></span>Menu</button>  
   
   <nav class="nav-collapse">
     
