--- a/app/views/collaborations/_form.html.erb
+++ b/app/views/collaborations/_form.html.erb
@@ -1,8 +1,8 @@
 <div class="form-group">
   <%= label_tag "Add collaborators" %>
 
-  <%= text_field_tag 'collaborator_username',
+  <%= text_field_tag 'collaborator_email',
                 nil,
                 class: 'form-control',
-                placeholder: "Add a wiki collaborator by username" %>
+                placeholder: "Add a wiki collaborator by email" %>
 </div>
